adding new project to portfolio

--- a/index.html
+++ b/index.html
@@ -1025,7 +1025,7 @@ I am a bachelor of science in civil engineering and a Full Stack Web developer, 
 								
 										<div class="main-title ">
 			                               <h1 class="mb-20">Portfolio</h1>
-			                               <h5 class="uppercase">My recent works</h5>
+			                               <h5 class="uppercase">The most recent</h5>
 			                           </div>
 	
 									</div>
@@ -1083,6 +1083,23 @@ I am a bachelor of science in civil engineering and a Full Stack Web developer, 
 						<div class="col-md-12">
 
 						<ul class="work">
+
+							<li class="col-sm-6 ">
+
+								<!--Item-->	
+								<div class="item web">
+									<a href="project_shm.html">
+										<div class="desc">
+											<h5 class="proj-desc">SHM
+											<span>3D web development [Collaboration]</span></h5>
+										</div>
+										<img src="img/portfolio/3D-structural-monitor.gif" alt>
+									</a>
+
+								</div>
+								<!--End item-->	
+
+							</li>
 
 							<li class="col-sm-6 ">
 
