feat: updating portafolio projects

--- a/index.html
+++ b/index.html
@@ -1189,6 +1189,21 @@ I am a bachelor of science in civil engineering and a Full Stack Web developer, 
 						<div class="col-md-12">
 
 						<ul class="work">
+							<li class="col-sm-6 ">
+
+								<!--Item-->	
+								<div class="item web">
+									<a href="project_jewerly_customizer.html">
+										<div class="desc">
+											<h5 class="proj-desc">Jewerly Customizer
+											<span>Full development - back-end and front-end</span></h5>
+										</div>
+										<img src="img/portfolio/jewerly-customizer-01.gif" alt>
+									</a>
+
+								</div>
+								<!--End item-->	
+							</li>
 
 							<li class="col-sm-6 ">
 
@@ -1278,7 +1293,7 @@ I am a bachelor of science in civil engineering and a Full Stack Web developer, 
 
 								<!--Item-->	
 							<div class="item web">
-								<a href="img/portfolio/ingeniatek1-m.png" class="popup">
+								<a href="project_ingeniatek.html">
 									<div class="desc">
 									<h5 class="proj-desc">Ingenia Tek
 										<span>Web development</span></h5>
