--- a/project_planbim.html
+++ b/project_planbim.html
@@ -71,9 +71,9 @@
 					<div class="block-nav-work">
 
 					<ul>
-					<li><a href="project_oimake.html"><span><span class="left-arr">&larr;</span>Previous Project</span></a></li>
+					<li><a href="project_ingeniatek.html"><span><span class="left-arr">&larr;</span>Previous Project</span></a></li>
 					<li><a href="index.html#portfolio"><span>All Projects</span></a></li>
-					<li><a href="project_ingeniatek.html"><span>Next Project<span class="right-arr">&rarr;</span></span></a></li>
+					<li><a href="project_oimake.html"><span>Next Project<span class="right-arr">&rarr;</span></span></a></li>
 					</ul>
 
 				  </div>
