--- a/project_ingeniatek.html
+++ b/project_ingeniatek.html
@@ -71,9 +71,9 @@
 					<div class="block-nav-work">
 
 					<ul>
-					<li><a href="project_ifcforhumans.html"><span><span class="left-arr">&larr;</span>Previous Project</span></a></li>
+					<li><a href="project_jewerly_customizer.html"><span><span class="left-arr">&larr;</span>Previous Project</span></a></li>
 					<li><a href="index.html#portfolio"><span>All Projects</span></a></li>
-					<li><a href="project_oicrea.html"><span>Next Project<span class="right-arr">&rarr;</span></span></a></li>
+					<li><a href="project_planbim.html"><span>Next Project<span class="right-arr">&rarr;</span></span></a></li>
 					</ul>
 
 				  </div>
@@ -169,7 +169,7 @@
 					<div class="block-single mb-60 clearfix">
 						
 						<div class="col-md-12">
-						<img class="portfolio-img" src="img/portfolio/ifcforhumans1.gif" alt>
+						<img class="portfolio-img" src="img/portfolio/ingeniatek1-m.png" alt>
 						</div>
 					</div>
 					
