feat: add Building Modeler project to portfolio with detailed description and image

--- a/index.html
+++ b/index.html
@@ -1209,6 +1209,22 @@ I am a bachelor of science in civil engineering and a Full Stack Web developer, 
 
 								<!--Item-->	
 								<div class="item web">
+									<a href="project_building_modeler.html">
+										<div class="desc">
+											<h5 class="proj-desc">Building Modeler
+											<span>All the Front-end and some RESTful APIs</span></h5>
+										</div>
+										<img src="img/portfolio/project-building-modeler.gif" alt>
+									</a>
+
+								</div>
+								<!--End item-->	
+							</li>
+
+							<li class="col-sm-6 ">
+
+								<!--Item-->	
+								<div class="item web">
 									<a href="project_shm.html">
 										<div class="desc">
 											<h5 class="proj-desc">SHM
